semigroup/tests/ui/semigroup/derive_monoid_without_monoid.stderr
error[E0405]: cannot find trait `Monoid` in crate `semigroup`
 --> tests/ui/semigroup/derive_monoid_without_monoid.rs:3:35
  |
3 | #[derive(Debug, Clone, PartialEq, Semigroup)]
  |                                   ^^^^^^^^^ not found in `semigroup`
  |
  = note: this error originates in the derive macro `Semigroup` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0405]: cannot find trait `ConstructionMonoid` in crate `semigroup`
 --> tests/ui/semigroup/derive_monoid_without_monoid.rs:3:35
  |
3 | #[derive(Debug, Clone, PartialEq, Semigroup)]
  |                                   ^^^^^^^^^
  |
 ::: src/construction.rs
  |
  | pub trait Construction<T>: Semigroup + Sized + From<T> + Deref<Target = T> + DerefMut {
  | ------------------------------------------------------------------------------------- similarly named trait `Construction` defined here
  |
  = note: this error originates in the derive macro `Semigroup` (in Nightly builds, run with -Z macro-backtrace for more info)
